Adds initial elm routes; some updates to bin scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,18 @@ tags
 .tags
 .elixir_ls
 credo_extra
+
+# Distribution
+build/
+
+# elm-package generated files
 elm-stuff
+
+# elm-repl generated files
+repl-temp-*
+
+# Dependency directories
+node_modules
+
+# Desktop Services Store on macOS
+.DS_Store
